--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,18 @@
   "cSpell.words": [
     "nestjs"
   ],
+  "editor.formatOnSave": false,
+  "prettier.semi": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": false
+  },
+  "prettier.enable": false,
+  "prettier.configPath": "",
+  "prettier.trailingComma": "none",
+  "eslint.workingDirectories": [
+  
+  ],
+  "prettier.embeddedLanguageFormatting": "off",
+  "typescript.format.semicolons": "insert",
+  "prettier.singleQuote": true,
 }
