exception filters and pipes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "cSpell.words": [
     "nestjs"
   ],
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "prettier.semi": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": false
